Fix bug causing cells to overflow grid container by removing min width for cells

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,6 @@ main {
 
 .grid-cell {
     background-color: pink;
-    min-height: 5px;
 }
 
 /* CONTROLS AREA */
